--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "devDependencies": {
     "fetch-mock": "^5.9.4",
     "jsdom": "^9.9.1",
-    "mocha": "^3.2.0",
-    "react-scripts": "^1.0.7",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "mocha": "^5.2.0",
+    "react-scripts": "^2.1.1",
+    "react-test-renderer": "^16.0.0"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
@@ -24,6 +21,7 @@
     "expect": "^21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "semantic-ui-css": "^2.4.1",
     "sinon": "^1.17.7",
     "whatwg-fetch": "^2.0.3"
   },
@@ -34,5 +32,11 @@
     "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
